test/valid/64371_bubble_sort/bubble_sort.agu
-- Author: 64371, Ricardo Costa

-- sorts array in ascending order in O(n^2)
let bubbleSort(arr): Int[] -> Unit =
    let n: Int = length(arr);
    let i: Int = 0;
    while i < n do (
        let j: Int = 0;
        while j < n - i - 1 do (
            if arr[j] > arr[j + 1] then (
                let tmp: Int = arr[j];
                set arr[j] = arr[j + 1];
                set arr[j + 1] = tmp
            );
            set j = j + 1
        );
        set i = i + 1
    )


let main: Unit =
    let arr: Int[] = new Int[5 | 0];
    set arr[0] = 3;
    set arr[1] = 1;
    set arr[2] = 5;
    set arr[3] = 2;
    set arr[4] = 4;
    bubbleSort(arr);
    let i: Int = 0;
    while i < 5 do (
        print(arr[i]);
        if i < 4 then print(","); -- 1,2,3,4,5
        set i = i + 1
    )
