test/invalid-semantic/64371_invalid_array_index_type/invalid_array_index_type.agu
-- Author: 64371, Ricardo Costa

let main: Unit =
    let arr: Int[] = new Int[5 | 0];
    set arr["0"] = 1 -- semantic error: invalid array index type
